fix: removed html reset button and recreated it in js once form is submitted to avoid accidental click

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
     <form id="form">
       <div class="form-box">
-      <label for="pizzasizeone">Deal 1 pizza size</label>
+      <label for="pizzasizeone">Deal 1 pizza size</label></br>
       <input
         type="number"
         name="pizzasizeone"
@@ -26,7 +26,7 @@
         value=""
         required
       />
-      </br><label for="pizzaamountone">Deal 1 number of pizzas</label>
+      </br><label for="pizzaamountone">Deal 1 number of pizzas</label></br>
       <input
         type="number"
         name="pizzaamountone"
@@ -35,7 +35,7 @@
         value=""
         required
       />
-      </br><label for="dealcostone">Deal 1 cost</label>
+      </br><label for="dealcostone">Deal 1 cost</label></br>
       <input
         type="number"
         step=".01"
@@ -45,11 +45,11 @@
         value=""
       /></div>
             <div class="form-box">
-      <label for="pizzasizetwo" >Deal 2 pizza size</label>
+      <label for="pizzasizetwo" >Deal 2 pizza size</label></br>
       <input name="pizzasizetwo" type="number" id="pizzasizetwo" class="text-field" value="" />
-      </br><label for="pizzaamounttwo">Deal 2 number of pizzas</label></label>
+      </br><label for="pizzaamounttwo">Deal 2 number of pizzas</label></br>
       <input name="pizzaamounttwo" type="number" id="pizzaamounttwo" class="text-field" value="" />
-      </br><label for="dealcosttwo">Deal 2 cost</label>
+      </br><label for="dealcosttwo">Deal 2 cost</label></br>
       <input name="dealcosttwo" type="number" step=".01" id="dealcosttwo" class="text-field" value="" /></div>
       <button type="submit" id="submit-button">Submit</button>
     </form>
@@ -57,7 +57,7 @@
     <div id="results-container">
     <div id="results">
     </div>
-    <button id="clear-button">Reset</button>
+
 </div>
     </main>
   </body>
