fix: adjusted responsive styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza Pi</title>
-    <link rel="icon" type="image/x-icon" href="/images/pizza_pi.png" />
+    <link rel="icon" type="image/x-icon" href="./images/pizza_pi.png" />
     <script type="module" src="app.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
